--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 .title-text {
   display: flex;
   justify-content: center;
-  height: 10vh;
+  height: 80px;
   margin-top: 100px;
   font-size: 2rem;
 }
